# test_nav

donaxi_base/: CMakeLists.txt  package.xml
donaxi_description/: CMakeLists.txt  mainpage.dox  package.xml  urdf.rviz~
donaxi_description/launch/: donaxi_base_only.launch~  donaxi_urdf.launch  pi_robot_base_only.launch~
donaxi_description/meshes/: Base.stl  Central_Frame.stl  EX106.stl  Elbow.stl  Fourth_Link.stl  Gripper.stl  RX28.stl  RX64.stl  Riel_FA.stl  Shoulder.stl  Upper_Arm.stl  Wrist.stl
donaxi_description/urdf/donaxi/: donaxi_base.urdf.xacro  donaxi_base.urdf.xacro~  donaxi_base_only.xacro~  donaxi_central_frame.urdf.xacro  donaxi_central_frame.urdf.xacro~  donaxi_kinect.urdf.xacro  donaxi_kinect.urdf.xacro~  donaxi_kinect.xacro~  donaxi_kinect_top.urdf.xacro  donaxi_neck_head.urdf.xacro  donaxi_neck_head.urdf.xacro~  donaxi_riel.urdf.xacro  donaxi_riel.urdf.xacro~  donaxi_riel.xacro~  donaxi_right_arm.urdf.xacro  donaxi_robot.urdf  donaxi_urdf.xacro  donaxi_urdf.xacro~  dynamixel_description.xacro~  dynamixel_description_arm.xacro  pi_base.urdf.xacro~
donaxi_msgs/: CMakeLists.txt  package.xml
donaxi_msgs/msg/: FRClientGoal.msg  coordenadas.msg  spatial_info.msg
donaxi_msgs/srv/: Service1.srv
